# pygsw

./: .gitmodules  CMakeLists.txt  setup.py
examples/: test.ipynb
pygsw/: __init__.py  __main__.py
src/: _pygsw.pyx  wrapper.F90
